# pyarr

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc  CHANGELOG.md  LICENSE  MISSING_ENDPOINTS.html  Makefile  README.md  codecov.yml  contributing.html  genindex.html  index.html  installing.html  literals.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  release-please-config.json  search.html  searchindex.js  setup.py  test_async_live_environments.ipynb  test_live_environments.ipynb  test_sync_live_environments.ipynb  testing_notebook.ipynb  toc.html
.ci/: docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.workspace.yml  docker-compose.yml  example-env  post-install.sh  recommended-Dockerfile  recommended-devcontainer.json  recommended-docker-compose.yml
.doctrees/: MISSING_ENDPOINTS.doctree  contributing.doctree  environment.pickle  index.doctree  installing.doctree  literals.doctree  quickstart.doctree  toc.doctree
.doctrees/models/: common.doctree  lidarr.doctree  radarr.doctree  readarr.doctree  sonarr.doctree
.doctrees/modules/: bazarr.doctree  common.doctree  dispatcharr.doctree  lidarr.doctree  prowlarr.doctree  radarr.doctree  readarr.doctree  sonarr.doctree  whisparr.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.rst  release-please-config.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: black_check.yml  check-version.yml  ci_workflow.yml  codecov.yml  coverage.yaml  coverage.yml  docs.yaml  docs.yml  greetings.yml  pr.yml  publish-docs.yml  pythonapp.yml  release.yaml  release.yml  release.yml.old  sync-check.yaml  test.yaml  test.yml  update_docs.yml
PyArr/: __init__.py  radarr_api.py  request_api.py  sonarr_api.py
_modules/: index.html
_modules/pyarr/: bazarr.html  dispatcharr.html  lidarr.html  prowlarr.html  radarr.html  readarr.html  sonarr.html  whisparr.html
_modules/pyarr/_sync/: bazarr.html  dispatcharr.html  lidarr.html  prowlarr.html  radarr.html  readarr.html  sonarr.html  whisparr.html
_modules/pyarr/common/: backup.html  (+18 more)
_sources/: contributing.rst.txt  index.rst.txt  installing.rst.txt  literals.rst.txt  quickstart.rst.txt
_sources/models/: readarr.rst.txt
_sources/modules/: common.rst.txt  prowlarr.rst.txt  radarr.rst.txt  sonarr.rst.txt  whisparr.rst.txt
arr/: __init__.py  request_api.py  sonarr_api.py
docs/: .buildinfo  CNAME  Gemfile  MISSING_ENDPOINTS.md  README.md  _config.yml  changelog.md  conf.py  contributing.html  contributing.rst  features.md  genindex.html  index.html  index.md  index.rst  installing.html  objects.inv  py-modindex.html  quickstart.md  quickstart.rst  radarr.html  search.html  searchindex.js  sonarr.html  toc.html  toc.rst
docs/.doctrees/: contributing.doctree  environment.pickle  index.doctree  installing.doctree  radarr.doctree  sonarr.doctree  toc.doctree
docs/API/: README.md
docs/RadarrAPI/: Queue.md  addMovie.md  delMovie.md  getCalendar.md  getCommand.md  getDiskSpace.md  getHistory.md  getMovie.md  getRoot.md  getSystemStatus.md  index.md  lookupMovie.md  refreshMovie.md  rescanMovie.md  setCommand.md  updMovie.md
docs/RadarrAPIv1/: get_calendar.md  get_command.md  get_history.md  get_root.md  get_system_status.md  index.md
docs/RadarrAPIv3/: get_custom_filter.md  history.md  importlist.md  index.md  indexer.md  movie.md  moviefile.md
docs/SonarrAPI/: Queue.md  addSeries.md  add_series.md  delQueue.md  delSeries.md  del_queue.md  getBackup.md  getCalendar.md  getCommand.md  getDiskSpace.md  getEpisodeByEpisodeId.md  getEpisodesBySeriesId.md  getHistory.md  getLogs.md  getQualityProfiles.md  getQueue.md  getRoot.md  getSeries.md  getSystemStatus.md  getWanted.md  get_backup.md  get_history.md  get_logs.md  get_queue.md  get_system_status.md  get_wanted.md  lookupSeries.md  lookup_series.md  refreshSeries.md  rescanSeries.md  setCommand.md  updEpisode.md  updSeries.md  upd_series.md
docs/_modules/: index.html
docs/_sources/: index.rst.txt  radarr.rst.txt  sonarr.rst.txt
docs/models/: common.rst  radarr.rst
docs/modules/: bazarr.rst  common.rst  dispatcharr.rst  lidarr.rst  prowlarr.rst  radarr.rst  readarr.rst  sonarr.rst  whisparr.rst
models/: common.html  lidarr.html  radarr.html  readarr.html  sonarr.html
modules/: bazarr.html  common.html  dispatcharr.html  lidarr.html  prowlarr.html  radarr.html  readarr.html  sonarr.html  whisparr.html
pyarr/: __init__.py  base.py  const.py  exceptions.py  lidarr.py  radarr.py  radarr_api.py  radarr_api_v1.py  radarr_api_v3.py  readarr.py  request_api.py  request_handler.py  sonarr.py  sonarr_api.py  types.py
pyarr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyarr/lib/: alias_decorator.py
pyarr/models/: common.py  lidarr.py  radarr.py  readarr.py  sonarr.py
scripts/: generate_sync.py
sphinx-docs/: conf.py  contributing.rst  installing.rst  modules.rst  pyarr.rst  quickstart.rst  requirements.txt  toc.rst
sphinx-docs/models/: common.rst  lidarr.rst  radarr.rst  readarr.rst  sonarr.rst
sphinx-docs/modules/: lidarr.rst  readarr.rst  sonarr.rst
src/pyarr/: __init__.py  client.py  literals.py  types.py
tests/: __init__.py  conftest.py  test_lidarr.py  test_radarr.py  test_readarr.py  test_sonarr.py
tests/common/: test_calendar.py  test_wanted.py
tests/integration/: conftest.py  test_bazarr.py  test_common_phase1.py  test_common_phase2.py  test_coverage_improvement.py  test_dispatcharr.py  test_http_errors.py  test_lidarr_common.py  test_lidarr_phase5.py  test_prowlarr.py  test_radarr_common.py  test_radarr_phase4.py  test_readarr.py  test_sonarr_common.py  test_sonarr_episode.py  test_sonarr_phase3.py  test_sonarr_series.py  test_whisparr.py
tests/radarr/: test_backup.py  test_blocklist.py  test_history.py  test_radarr.py  test_system.py  test_tag.py
tests/readarr/: test_backup.py  test_history.py  test_readarr.py  test_system.py
tests/sonarr/: test_backup.py  test_history.py  test_sonarr.py  test_system.py
(+470 files in other folders)
