[tool.poetry]
name = "pyarr"
version = "5.2.0"
description = "Synchronous Sonarr, Radarr, Lidarr and Readarr API's for Python"
authors = ["Steven Marks <marksie1988@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["sonarr", "radarr", "readarr", "lidarr", "api", "wrapper", "plex"]
homepage = "https://github.com/totaldebug/pyarr"
repository = "https://github.com/totaldebug/pyarr"
documentation = "https://docs.totaldebug.uk/pyarr"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    {include = "pyarr"},
    {include = "pyarr/py.typed"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
types-requests = "^2.28.11.17"
overrides = "^7.3.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
flake8 = "^3.9.2"
isort = "^5.12.0"
mypy = "^0.910"
pre-commit = "^2.21.0"
interrogate = "^1.5.0"
Sphinx = "^4.5.0"
sphinx-argparse = "^0.3.2"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.2.2"
pytest-cov = "^3.0.0"
pylint = "^2.17.1"
responses = "^0.21.0"
autoflake = "^1.7.8"
ipykernel = "^6.22.0"
sphinx-toolbox = "^3.4.0"
enum-tools = "^0.9.0.post1"
pytest-rerunfailures = "^11.1.2"
nox = "^2022.11.21"
toml = "^0.10.2"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pyarr"
disallow_untyped_defs = true

[tool.isort]
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "pyarr",
    "tests",
]
forced_separate = [
    "tests",
]
skip = [".cache", ".nox"]
combine_as_imports = true

[tool.autoflake]
check = true
remove-unused-variables = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "sphinx-docs", "build", ".devcontainer", ".nox", ".cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
color = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.masonry.api"
