[project]
name = "pyarr"
version = "6.0.0"
description = "Synchronous Sonarr, Radarr, Lidarr, Prowlarr, Bazarr, Dispatcharr and Readarr API's for Python"
authors = [
    { name = "Steven Marks", email = "marksie1988@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["sonarr", "radarr", "readarr", "lidarr", "prowlarr", "dispatcharr", "bazarr", "api", "wrapper", "plex"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests>=2.28.2",
    "types-requests>=2.28.11.17",
    "overrides>=7.3.1",
    "yarl>=1.9.4",
    "backoff>=2.2.1",
    "httpx>=0.28.1",
]

[project.urls]
homepage = "https://github.com/totaldebug/pyarr"
repository = "https://github.com/totaldebug/pyarr"
documentation = "https://docs.totaldebug.uk/pyarr"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "interrogate>=1.5.0",
    "Sphinx>=7.3.7",
    "sphinx-argparse>=0.4.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-rtd-theme>=2.0.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "ipykernel>=6.22.0",
    "sphinx-toolbox>=3.4.0",
    "enum-tools>=0.12.0",
    "pytest-rerunfailures>=14.0",
    "nox>=2024.4.15",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
    "commitizen>=3.27.0",
    "myst-parser>=1.0.0",
    "pytest-asyncio>=1.3.0",
    "unasync>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pyarr"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "pyarr.*"
disallow_untyped_defs = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "sphinx-docs", "build", ".devcontainer", ".nox", ".cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
color = true
